name:                sleepless
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/sleepless#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable sleepless
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
  build-depends:       base >= 4.7 && < 5
                     , megaparsec
                     , containers
